--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql2": "^2.3.2"
+    "mysql2": "^2.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
